Map for search, form w/ binding for posting newbites

--- a/app/styles/compass_twitter_bootstrap/_variables.scss
+++ b/app/styles/compass_twitter_bootstrap/_variables.scss
@@ -133,7 +133,7 @@ $zindexModal:             1050 !default;
 
 // Sprite icons path
 // -------------------------
-$iconSpritePath:          "glyphicons-halflings.png" !default;
+$iconSpritePath:          "/images/glyphicons-halflings.png" !default;
 $iconWhiteSpritePath:     "glyphicons-halflings-white.png" !default;
 
 
