--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,3 +3,24 @@
 body {
 	background-image: url(/images/bg.jpg);
 }
+
+.offset-top {
+	margin-top: 3em;
+}
+
+#about-page{
+	border-width:1px;
+}
+
+.facilityList{
+	list-style: none;
+}
+
+#map{
+	width: 400px;
+	height: 400px;
+}
+
+#map-container{
+	
+}
