--- a/app/partials/find.html
+++ b/app/partials/find.html
@@ -1,13 +1,14 @@
 ﻿<div class="span12">
     <div class="hero-unit offset-top">
-        <h1>Find facilities</h1>
+        <h1>For NPO's: Find facilities</h1>
 
-        <ul class="facilityList">
-            <li ng-repeat="facility in facilities">{{facility.name}}</li>
-        </ul>
-        
+
         <div class="span4">
             <p>Add some other search criteria here</p>
+            <ul class="facilityList">
+                <li ng-repeat="facility in facilities">{{facility.name}}</li>
+            </ul>
+
         </div>
         <div class="map-container offset5">
             <div id="map" style=""></div>
