--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -1,6 +1,36 @@
 ﻿<div id="about-page" class="span7 hero-unit offset-top">
     <h2>Facilities for Not-for-Profits</h2>
     <p>Content for our about page</p>
+
+    <p>
+        Welcome to CivicSpaces a way to connect active citizens to unused spaces in and
+        around Atlanta.  Community groups can search for and connect with empty offices,
+        storefronts or even vacant lots and fill them with their events and activities.
+        Spaces range from free to medium in cost and very in neighborhood, size and functionality.
+        We hope you find a space to grow your idea or event!
+    </p>
+
+    <p>
+        For Citizens
+        Individuals and organizations like you constantly need space to grow ideas. Office
+        space
+        to work in. Event space for fundraisers. A vacant lot to grow food on.  CivicSpaces
+        can pair you with empty properties around Atlanta. We allow you to find properties
+        that fit your needs- location, size and use- and best of all that fit your budget.
+        Our participating spaces range from free to medium rental costs. Search our database,
+        find a property that matches your needs and connect! 
+    </p>
+
+    <p>
+        For Spaces
+Do you have an unused office, retail storefront or loft? How about a vacant lot? CivicSpaces
+        can help you partner with community activists who can bring your space to life.
+        Whether its a nonprofit needing temporary office space or an arts group looking
+        for a pop-up gallery store front, CivicSpaces aims to fill your empty square feet
+        with life. Not only could you receive tax benefits* but filling unused space with
+        activity makes it instantly more desirable, resulting in a higher likelihood in
+        a profitable lease or sale. 
+    </p>
 </div>
 
 <div class="span2 hero-unit offset-top">
